--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -115,6 +115,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-common-nacos</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
@@ -372,11 +377,6 @@
             <dependency>
                 <groupId>org.laokou</groupId>
                 <artifactId>laokou-common-api</artifactId>
-                <version>${laokou.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.laokou</groupId>
-                <artifactId>laokou-common-freemarker</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
