--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -80,6 +80,7 @@
         <module>laokou-common-logback</module>
         <module>laokou-common-algorithm</module>
         <module>laokou-common-skywalking</module>
+        <module>laokou-common-nacos</module>
     </modules>
 
 </project>
