--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -64,19 +64,19 @@ spring:
       authorization-server:
         enabled: true
         token:
-          authorizationCodeTimeToLive: 1h
-          accessTokenTimeToLive: 1h
-          refreshTokenTimeToLive: 6h
+          authorization-code-time-to-live: 1h
+          access-token-time-to-live: 1h
+          refresh-token-time-to-live: 6h
         client:
-          requireAuthorizationConsent: true
+          require-authorization-consent: true
         registration:
           id: 95TxSsTPFA3tF12TBSMmUVK0da
-          clientId: 95TxSsTPFA3tF12TBSMmUVK0da
-          clientName: OAuth2认证
-          clientSecret: "{bcrypt}$2a$10$BDcxgmL3WYk7G.QEDTqlBeSudNlV3KUU/V6iC.hKlAbGAC.jbX2fO"
-          clientAuthenticationMethods:
+          client-id: 95TxSsTPFA3tF12TBSMmUVK0da
+          client-name: OAuth2认证
+          client-secret: "{bcrypt}$2a$10$BDcxgmL3WYk7G.QEDTqlBeSudNlV3KUU/V6iC.hKlAbGAC.jbX2fO"
+          client-authentication-methods:
             - client_secret_basic
-          authorizationGrantTypes:
+          authorization-grant-types:
             - password
             - mail
             - mobile
@@ -88,10 +88,10 @@ spring:
             - mail
             - mobile
             - openid
-          redirectUris:
+          redirect-uris:
             - http://127.0.0.1:8000
             - http://127.0.0.1:8001
-        requestMatcher:
+        request-matcher:
           patterns:
             - /oauth2/captcha
             - /oauth2/logout
