--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -15,6 +15,7 @@
         <module>laokou-test-juc</module>
         <module>laokou-test-liquibase</module>
         <module>laokou-test-web</module>
+        <module>laokou-test-webflux</module>
         <module>laokou-test-elasticsearch</module>
     </modules>
 </project>
