--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -109,11 +109,18 @@
         <rocketmq-logappender.version>5.0.0-PREVIEW</rocketmq-logappender.version>
         <!--kafka版本-->
         <kafka.version>3.0.4</kafka.version>
+        <!--netty版本-->
+        <netty.version>4.1.92.Final</netty.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
                 <artifactId>laokou-common-nacos</artifactId>
