--- a/laokou-common/laokou-common-netty/pom.xml
+++ b/laokou-common/laokou-common-netty/pom.xml
@@ -19,6 +19,10 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
