--- a/laokou-service/laokou-module/laokou-test/laokou-test-netty/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-netty/pom.xml
@@ -10,9 +10,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.90.Final</version>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-netty</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
