--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -17,5 +17,6 @@
         <module>laokou-test-web</module>
         <module>laokou-test-webflux</module>
         <module>laokou-test-elasticsearch</module>
+        <module>laokou-test-nio</module>
     </modules>
 </project>
