--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
@@ -6,8 +6,7 @@ spring:
       username: ${NACOS-USERNAME}
       password: ${NACOS-PASSWORD}
       discovery:
-        server-addr: ${NACOS-DISCOVERY-ADDRESS}
-        namespace: ${NACOS-NAMESPACE}
+        enabled: false
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
