--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
@@ -19,3 +19,6 @@ spring:
           - data-id: application-common.yaml
             group: ${NACOS-GROUP}
             refresh: true
+          - data-id: application-common-redis.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
