--- a/laokou-service/laokou-module/laokou-test/laokou-test-webflux/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-webflux/pom.xml
@@ -15,6 +15,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
