--- a/laokou-service/laokou-module/laokou-test/laokou-test-webflux/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-webflux/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 8888
+
+spring:
+  data:
+    redis:
+      database: 0
+      host: 127.0.0.1
+      port: 6379
+      timeout: 60000s
+      connect-timeout: 60000s
