style: netty的ws注册到nacos，剔除im的自动注册，通过gateway统一管理ws

--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/src/main/resources/bootstrap.yml
@@ -5,6 +5,9 @@ spring:
     nacos:
       username: ${NACOS-USERNAME}
       password: ${NACOS-PASSWORD}
+      discovery:
+        server-addr: ${NACOS-DISCOVERY-ADDRESS}
+        namespace: ${NACOS-NAMESPACE}
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
@@ -17,6 +20,9 @@ spring:
         # Data Id 在默认的组 DEFAULT_GROUP,不支持配置的动态刷新
         extension-configs:
           - data-id: application-common.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
+          - data-id: application-common-rocketmq.yaml
             group: ${NACOS-GROUP}
             refresh: true
           - data-id: application-common-redis.yaml
