--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/bootstrap.yml
@@ -49,3 +49,6 @@ spring:
           - data-id: application-common-elasticsearch.yaml
             group: ${NACOS-GROUP}
             refresh: true
+          - data-id: application-common-rocketmq.yaml
+            group: ${NACOS-GROUP}
+            refresh: true
