--- a/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-server/pom.xml
@@ -53,6 +53,10 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-rocketmq</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-auth-client</artifactId>
             <exclusions>
                 <exclusion>
