--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -83,6 +83,7 @@
         <module>laokou-common-nacos</module>
         <module>laokou-common-xss</module>
 		<module>laokou-common-netty</module>
-	</modules>
+        <module>laokou-common-idempotent</module>
+    </modules>
 
 </project>
