--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -72,7 +72,7 @@ spring:
         registration:
           id: 95TxSsTPFA3tF12TBSMmUVK0da
           client-id: 95TxSsTPFA3tF12TBSMmUVK0da
-          client-name: OAuth2认证
+          client-name: OAuth2.1认证
           client-secret: "{bcrypt}$2a$10$BDcxgmL3WYk7G.QEDTqlBeSudNlV3KUU/V6iC.hKlAbGAC.jbX2fO"
           client-authentication-methods:
             - client_secret_basic
@@ -97,3 +97,4 @@ spring:
             - /oauth2/logout
             - /oauth2/tenant
             - /oauth2/secret_info
+            - /oauth2/idempotent_token
