--- a/laokou-common/laokou-common-idempotent/pom.xml
+++ b/laokou-common/laokou-common-idempotent/pom.xml
@@ -12,12 +12,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-core</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-redis</artifactId>
         </dependency>
     </dependencies>
 
