--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -32,6 +32,10 @@
 			<artifactId>laokou-common-logback</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-idempotent</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
