--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -405,7 +405,7 @@
             </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
-                <artifactId>laokou-common-api</artifactId>
+                <artifactId>laokou-common-secret</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
