--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -36,7 +36,7 @@
         <module>laokou-common-log</module>
         <module>laokou-common-data-cache</module>
         <module>laokou-common-data-filter</module>
-        <module>laokou-common-api</module>
+        <module>laokou-common-secret</module>
         <module>laokou-common-i18n</module>
         <module>laokou-common-banner</module>
         <module>laokou-common-jasypt</module>
