--- a/laokou-common/laokou-common-secret/pom.xml
+++ b/laokou-common/laokou-common-secret/pom.xml
@@ -23,12 +23,16 @@
         <version>3.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-common-api</artifactId>
+    <artifactId>laokou-common-secret</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
