--- a/laokou-cloud/laokou-sentinel/pom.xml
+++ b/laokou-cloud/laokou-sentinel/pom.xml
@@ -17,7 +17,7 @@
         <!--curator版本-->
         <curator.version>4.0.1</curator.version>
         <!--log4j版本-->
-        <log4j.version>1.2.17</log4j.version>
+        <log4j.version>2.19.0</log4j.version>
         <!--commons-lang版本-->
         <commons-lang.version>2.6</commons-lang.version>
         <!--httpclient版本-->
@@ -74,9 +74,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
