--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -20,6 +20,17 @@ server:
     connection-timeout: 600000
   compression:
     enabled: true
+  ssl:
+    # 开启证书
+    enabled: true
+    # 证书位置
+    key-store: classpath:scg-keystore.p12
+    # 证书别名
+    key-alias: gateway
+    # 秘钥类型
+    key-store-type: PKCS12
+    # 口令
+    key-store-password: koushenhai
 
 # spring
 spring:
