--- a/pom.xml
+++ b/pom.xml
@@ -195,14 +195,14 @@
             <id>dev</id>
             <properties>
                 <MYSQL-USERNAME>root</MYSQL-USERNAME>
-                <MYSQL-PASSWORD>123456</MYSQL-PASSWORD>
+                <MYSQL-PASSWORD>koushenhai123456</MYSQL-PASSWORD>
                 <MYSQL-HOST>127.0.0.1</MYSQL-HOST>
-                <MYSQL-DB-NACOS>nacos-config</MYSQL-DB-NACOS>
-                <MYSQL-DB-SEATA>seata-config</MYSQL-DB-SEATA>
-                <MYSQL-DB-XXL-JOB>xxl-job-config</MYSQL-DB-XXL-JOB>
-                <MYSQL-POWER-JOB>power-job-config</MYSQL-POWER-JOB>
+                <MYSQL-DB-NACOS>kcloud_platform_nacos</MYSQL-DB-NACOS>
+                <MYSQL-DB-SEATA>kcloud_platform_seata</MYSQL-DB-SEATA>
+                <MYSQL-DB-XXL-JOB>kcloud_platform_xxl_job</MYSQL-DB-XXL-JOB>
+                <MYSQL-DB-POWER-JOB>kcloud_platform_alibaba_power_job</MYSQL-DB-POWER-JOB>
                 <MYSQL-PORT>3306</MYSQL-PORT>
-                <NACOS-NAMESPACE>public</NACOS-NAMESPACE>
+                <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
                 <NACOS-DISCOVERY-ADDRESS>127.0.0.1:8848</NACOS-DISCOVERY-ADDRESS>
                 <NACOS-CONFIG-ADDRESS>127.0.0.1:8848</NACOS-CONFIG-ADDRESS>
                 <NACOS-GROUP>LAOKOU_GROUP</NACOS-GROUP>
