--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/bootstrap.yml
@@ -23,6 +23,8 @@ spring:
       discovery:
         server-addr: ${NACOS-DISCOVERY-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
+        # https
+        secure: true
       config:
         server-addr: ${NACOS-CONFIG-ADDRESS}
         namespace: ${NACOS-NAMESPACE}
