--- a/laokou-cloud/laokou-gateway/pom.xml
+++ b/laokou-cloud/laokou-gateway/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-cloud</artifactId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <artifactId>laokou-gateway</artifactId>
     <description>API网关</description>
