--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -21,10 +21,10 @@
 
     <groupId>org.laokou</groupId>
     <artifactId>laokou-common-bom</artifactId>
-    <version>3.1.1</version>
+    <version>${laokou.version}</version>
     <packaging>pom</packaging>
     <properties>
-        <laokou.version>3.1.1</laokou.version>
+        <laokou.version>${spring-boot.version}</laokou.version>
         <!--spring-boot版本-->
         <spring-boot.version>3.1.1</spring-boot.version>
         <!--lombok版本-->
