--- a/laokou-common/laokou-common-jasypt/pom.xml
+++ b/laokou-common/laokou-common-jasypt/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>laokou-common</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-jasypt</artifactId>
