--- a/laokou-common/laokou-common-wechat/pom.xml
+++ b/laokou-common/laokou-common-wechat/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <artifactId>laokou-common</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-wechat</artifactId>
-    <version>3.1.1</version>
+    <version>${laokou.version}</version>
     <packaging>pom</packaging>
 
     <modules>
