--- a/laokou-service/laokou-admin/laokou-admin-client/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-client/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-admin</artifactId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.laokou</groupId>
