--- a/laokou-service/laokou-auth/laokou-auth-server/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-server/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-auth</artifactId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <groupId>org.laokou</groupId>
     <artifactId>laokou-auth-server</artifactId>
