--- a/laokou-service/laokou-generate/pom.xml
+++ b/laokou-service/laokou-generate/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.laokou</groupId>
 		<artifactId>laokou-service</artifactId>
-		<version>3.1.1</version>
+		<version>${laokou.version}</version>
 	</parent>
 	<artifactId>laokou-generate</artifactId>
 	<dependencies>
