--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
@@ -21,10 +21,10 @@
     <parent>
         <artifactId>laokou-flowable</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <artifactId>laokou-flowable-server</artifactId>
-  <version>3.1.1</version>
+  <version>${laokou.version}</version>
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
