--- a/laokou-service/laokou-module/laokou-flowable/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
