--- a/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-elasticsearch/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>laokou-test</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <artifactId>laokou-test-elasticsearch</artifactId>
     <dependencies>
