--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -3,11 +3,11 @@
     <parent>
         <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-test</artifactId>
-    <version>3.1.1</version>
+    <version>${laokou.version}</version>
     <packaging>pom</packaging>
     <modules>
         <module>laokou-test-elasticsearch</module>
