--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -20,10 +20,10 @@
     <parent>
         <artifactId>laokou-service</artifactId>
         <groupId>org.laokou</groupId>
-        <version>3.1.1</version>
+        <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>3.1.1</version>
+    <version>${laokou.version}</version>
     <artifactId>laokou-module</artifactId>
     <packaging>pom</packaging>
     <modules>
