--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <description>一款企业级微服务架构的云服务多租户SaaS平台</description>
     <url>https://koushenhai.github.io/KCloud-Platform-Alibaba</url>
     <properties>
-        <laokou.version>${spring-boot.version}</laokou.version>
+        <laokou.version>3.1.1</laokou.version>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
