--- a/laokou-common/laokou-common-monitor/pom.xml
+++ b/laokou-common/laokou-common-monitor/pom.xml
@@ -10,4 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-monitor</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
