--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -35,8 +35,8 @@
 			<artifactId>laokou-common-idempotent</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-monitor</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.laokou</groupId>
