--- a/laokou-service/laokou-module/laokou-flyway/pom.xml
+++ b/laokou-service/laokou-module/laokou-flyway/pom.xml
@@ -3,21 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>laokou-common</artifactId>
+        <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
         <version>${laokou.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-common-liquibase</artifactId>
+    <artifactId>laokou-flyway</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>9.20.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
     </dependencies>
 
